# flappybird

./: .gitignore  CMakeLists.txt  README.md
doc/: class_diagram.uml  install.sh  makefile
src/: Animation.hpp  Bird.cpp  Bird.hpp  Game.cpp  Game.hpp  main.cpp
test/: test.cpp
